--- a/Setup/CustomActions/Omnebula.Gateway.CustomActions.vcxproj
+++ b/Setup/CustomActions/Omnebula.Gateway.CustomActions.vcxproj
@@ -85,8 +85,8 @@
       <ModuleDefinitionFile>CustomActions.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
-      <Command>SignTool sign /f "$(DevCertPath)\Joel Luzadas\Joel Luzadas Inc.pfx" /tr http://timestamp.digicert.com /td SHA256 /p "U93oO7aqeqw*hd" "$(TargetDir)$(TargetFileName)"
-copy /y "$(TargetDir)$(TargetFileName)" "$(SolutionDir)Setup\Installer"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
